--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "webdev-adventure-2022",
   "version": "0.1.0",
   "private": true,
+  "engineStrict": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,6 +11,7 @@
   },
   "dependencies": {
     "next": "12.1.6",
+    "next-pwa": "^5.5.2",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
