--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "email-validator": "^2.0.4",
     "firebase": "^9.7.0",
     "next": "12.1.6",
     "next-pwa": "^5.5.2",
