update .env (not USE)

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-FIREBASE_API_KEY = "AIzaSyBpCAnxOHCwvQcMdbnWZTMlG3ZEoe7QpWs"
-FIREBASE_AUTH_DOMAIN = "wda-sercom.firebaseapp.com"
-FIREBASE_PROJECT_ID = "wda-sercom"
-FIREBASE_STORAGE_BUCKET ="wda-sercom.appspot.com"
-FIREBASE_MESSENGING_SENDER_ID = "1064107709443"
-FIREBASE_PUBLIC_APP_ID = "1:1064107709443:web:52aa7fdf86155ba6d86a36"
-FIREBASE_MEASUREMENT_ID = "G-PNZCX62NRC"
+NEXT_PUBLIC_API_KEY=AIzaSyBpCAnxOHCwvQcMdbnWZTMlG3ZEoe7QpWs
+NEXT_PUBLIC_AUTH_DOMAIN=wda-sercom.firebaseapp.com
+NEXT_PUBLIC_PROJECT_ID=wda-sercom
+NEXT_PUBLIC_STORAGE_BUCKET=wda-sercom.appspot.com
+NEXT_PUBLIC_MESSENGING_SENDER_ID=1064107709443
+NEXT_PUBLIC_APP_ID=1:1064107709443:web:52aa7fdf86155ba6d86a36
+NEXT_PUBLIC_MEASUREMENT_ID=G-PNZCX62NRC
