--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "email-validator": "^2.0.4",
     "firebase": "^9.7.0",
+    "moment": "^2.29.3",
     "next": "12.1.6",
     "next-pwa": "^5.5.2",
     "react": "18.1.0",
