--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-firebase-hooks": "^5.0.3",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "eslint": "8.14.0",
